# reqres

./: .envexample  .gitignore  pyproject.toml  pytest.ini  readme.md  requirements.txt
framework/: reqres.py
model/: auth.py  users.py
reqres_tests/requests/: reqres.py
reqres_tests/responses/: auth.py  users.py
reqres_tests/utils/: attach.py
schemas/: reqres.py
tests/: test_api.py
utils/: attach.py  base_session.py
